<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.main.FragmentMain">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/jisho"
            style="@android:style/Widget.Button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/teal_700"
            android:layout_weight="1">

            <com.example.japanesepocketstudy.ui.main.furiganatextview.furiganaview.FuriganaTextView
                android:id="@+id/jisho_text_jpn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:text="@string/dictonary_jpn"

                android:textColor="@color/black"
                app:contains_ruby_tags="true"
                app:furigana_text_color="@color/black" />

            <TextView
                android:id="@+id/jisho_text_eng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:text="@string/dictonary_eng"
                android:textColor="@color/black"
                />
        </LinearLayout>

        <Space
            android:layout_width="5dp"
            android:layout_height="0dp" />

        <LinearLayout
            android:id="@+id/kanji"
            style="@android:style/Widget.Button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/teal_700"
            android:layout_weight="1">

            <com.example.japanesepocketstudy.ui.main.furiganatextview.furiganaview.FuriganaTextView
                android:id="@+id/kanji_text_jpn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:text="@string/kanji_jpn"
                android:textColor="@color/black"
                app:contains_ruby_tags="true"
                app:furigana_text_color="@color/black" />

            <TextView
                android:id="@+id/kanji_text_eng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:text="@string/kanji_eng"
                android:textColor="@color/black"
                />
        </LinearLayout>

        <Space
            android:layout_width="5dp"
            android:layout_height="0dp" />

        <LinearLayout
            android:id="@+id/sentences"
            style="@android:style/Widget.Button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/teal_700"
            android:layout_weight="1">

            <com.example.japanesepocketstudy.ui.main.furiganatextview.furiganaview.FuriganaTextView
                android:id="@+id/sentences_text_jpn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:text="@string/sentences_jpn"
                android:textColor="@color/black"
                app:contains_ruby_tags="true"
                app:furigana_text_color="@color/black" />

            <TextView
                android:id="@+id/sentences_text_eng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:text="@string/sentences_eng"
                android:textColor="@color/black"
                />
        </LinearLayout>

        <Space
            android:layout_width="5dp"
            android:layout_height="0dp" />

        <LinearLayout
            android:id="@+id/settings1"
            style="@android:style/Widget.Button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/teal_700"
            android:layout_weight="1">

            <com.example.japanesepocketstudy.ui.main.furiganatextview.furiganaview.FuriganaTextView
                android:id="@+id/settings1_text_jpn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:text="@string/settings_jpn"
                android:textColor="@color/black"
                app:contains_ruby_tags="true"
                app:furigana_text_color="@color/black" />

            <TextView
                android:id="@+id/settings1_text_eng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:text="@string/settings_eng"
                android:textColor="@color/black"
                />
        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>